--- a/README.org
+++ b/README.org
@@ -11,6 +11,6 @@ https://docs.openstack.org/cliff/ocata/demoapp.html
 pip install virtualenv
 virtualenv .venv
 . .venv/bin/activate
-python setup.py install #install cliff
+#install cliff into environment somehow
 python setup.py install
 #+end_src
